test/asm/interpolation.err
error: Interpolated symbol `undef` does not exist
    at interpolation.asm(18)
error: Interpolated symbol `label` does not exist
    at interpolation.asm(22)
error: Interpolated symbol `foo` is not a numeric or string symbol
    at interpolation.asm(29)
error: Interpolated symbol `xor` is a reserved keyword; add a '#' prefix to use it as a raw symbol
    at interpolation.asm(32)
Assembly aborted with 4 errors!
